Shtimi i Logos dhe header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image" href="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.15752-9/313815675_652898892942862_3583625417749956511_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=ae9488&_nc_ohc=WRH8Aapcn9wAX9ahF9x&_nc_ht=scontent.fprn12-1.fna&oh=03_AdTEWo696kCPKrAtjeHytX2Uxochzvx55gfuslUcP3CZOA&oe=6387F3B2">
+
 </head>
 <body>
+    <section class="section-1">
+		<header>
+			<h1> NT <span>ZOGU </span></h1>
+			<nav>
+				<ul>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="about.html">ABOUT</a></li>
+					<li><a href="project.html">PROJECT</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
+				</ul>
+			</nav>
+	    </header>
+	</section>
     
 </body>
 </html>
