Shtimi i fotos si dhe tekstit ne te dhe nje button

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="image" href="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.15752-9/313815675_652898892942862_3583625417749956511_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=ae9488&_nc_ohc=WRH8Aapcn9wAX9ahF9x&_nc_ht=scontent.fprn12-1.fna&oh=03_AdTEWo696kCPKrAtjeHytX2Uxochzvx55gfuslUcP3CZOA&oe=6387F3B2">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="imagez" href="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.15752-9/313815675_652898892942862_3583625417749956511_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=ae9488&_nc_ohc=WRH8Aapcn9wAX9ahF9x&_nc_ht=scontent.fprn12-1.fna&oh=03_AdTEWo696kCPKrAtjeHytX2Uxochzvx55gfuslUcP3CZOA&oe=6387F3B2">
 
 </head>
 <body>
@@ -21,6 +21,11 @@
 			</nav>
 	    </header>
 	</section>
+    <div class="textbox">
+		<h2>IF U WANT TO BE SAFE ,COME TO OUR PLACE </h2>
+		<p>“Good buildings come from good people,and all problems are solved by good design.</p>
+		<a href="" class="button"> Come work with us!</a>
+	</div>	
     
 </body>
 </html>
