Shtimi i tekstit per pjesen kryesore te homepage body dhe krijimi i kutis per vendosjen e houses-shtepive

--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
 		<p>“Good buildings come from good people,and all problems are solved by good design.</p>
 		<a href="" class="button"> Come work with us!</a>
 	</div>	
+
+    <section class="section-2" >
+				<h2> What Can We Offer</h2>
+				<p>  Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur.
+			<div class="offering">
+				<div class="houses" style="height: 500px;">
+					<img src="https://i.pinimg.com/564x/29/c5/a1/29c5a1a2b501193ff0903ddcac802d2f.jpg">
+					<div class="emri1">
+						<h3> HOUSES</h3>
+					</div>
+				</div>
     
 </body>
 </html>
