--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
 						<h3> HOUSES</h3>
 					</div>
 				</div>
+                <div class="build" style="height: 500px;">
+					<img src="https://i.pinimg.com/564x/00/f2/ca/00f2ca2703f98f7b8f96208d9ba49e17.jpg" >
+					<div class="emri2">
+						<h3>BUILDING</h3>
+					</div>
+						<div class="arch" style="height: 500px;">
+					<img src="https://i.pinimg.com/564x/9f/32/ab/9f32ab919ad2a418aa8c59145dc71a21.jpg" >
+					<div class="emri3">
+						<h3> ARCHITECTURE PLANS</h3>
+					</div>
+					
+				</div>
+				</div>
     
 </body>
 </html>
