Shtimi i pjeses tjt te formes per email dhe nr te telefonit

--- a/contact.html
+++ b/contact.html
@@ -42,5 +42,22 @@
 						<input type="text" placeholder="Driller">
 					</div>
 					</div>
+            <div class="input-row">
+					<div class="inputgroup">
+						<label> Email:</label>
+						<input type="Email" placeholder="example@gmail.com" required>
+					</div>	
+					<div class="inputgroup">
+						<label>Phone number:</label>
+						<input type="text" placeholder="012-345-678">
+					</div>
+				</div>
+                <label>Message</label>
+				<textarea rows="8" placeholder="Your Message..."></textarea>
+
+				<button type="button"> Next </button>
+					
+					
+				</form>			
 </body>
 </html>
