Marrja e ndryshimeve nga koleget ndryshimet e bera ne disa file duke perfahi edhe filen project.html mirpo edhe ndryshime tek pjesa e home page

--- a/index.html
+++ b/index.html
@@ -28,34 +28,33 @@
 	</div>	
 	</section>
 		
-		<section class="section-2" >
-				<h2> What Can We Offer</h2>
-				<p>  Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur.
-			<div class="offering">
-				<div class="houses" style="height: 500px;">
-					<img src="https://i.pinimg.com/564x/29/c5/a1/29c5a1a2b501193ff0903ddcac802d2f.jpg">
-					<div class="emri1">
-						<h3> HOUSES</h3>
-					</div>
-				</div>
-				<div class="build" style="height: 500px;">
-					<img src="https://i.pinimg.com/564x/00/f2/ca/00f2ca2703f98f7b8f96208d9ba49e17.jpg" >
-					<div class="emri2">
-						<h3>BUILDING</h3>
-					</div>
-					
-				</div>
-				<div class="arch" style="height: 500px;">
-					<img src="https://i.pinimg.com/564x/9f/32/ab/9f32ab919ad2a418aa8c59145dc71a21.jpg" >
-					<div class="emri3">
-						<h3> ARCHITECTURE PLANS</h3>
-					</div>
-					
-				</div>
-	
-			</div>
-		</section>
+		<section class="section-2">
+    <h2>What Can We Offer</h2>
+    <p>
+        Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur.
+    </p>
+
+    <div class="offering">
+
+        <div class="houses">
+            <img src="https://i.pinimg.com/564x/29/c5/a1/29c5a1a2b501193ff0903ddcac802d2f.jpg">
+            <h3>HOUSES</h3>
+        </div>
+
+        <div class="build">
+            <img src="https://i.pinimg.com/564x/00/f2/ca/00f2ca2703f98f7b8f96208d9ba49e17.jpg">
+            <h3>BUILDING</h3>
+        </div>
+
+        <div class="arch">
+            <img src="https://i.pinimg.com/564x/9f/32/ab/9f32ab919ad2a418aa8c59145dc71a21.jpg">
+            <h3>ARCHITECTURE PLANS</h3>
+        </div>
+
+    </div>
+</section>
+
 
         <footer>
     <div class="footer">
