--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Nt zogu</title>
-    <link rel="stylesheet" type="text/css" href="css/project.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image" href="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.15752-9/313815675_652898892942862_3583625417749956511_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=ae9488&_nc_ohc=WRH8Aapcn9wAX9ahF9x&_nc_ht=scontent.fprn12-1.fna&oh=03_AdTEWo696kCPKrAtjeHytX2Uxochzvx55gfuslUcP3CZOA&oe=6387F3B2">
 
 </head>
