Listening.html details.html dhe details.js dhe data.js shtimi i ketyre fileve

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image" href="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.15752-9/313815675_652898892942862_3583625417749956511_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=ae9488&_nc_ohc=WRH8Aapcn9wAX9ahF9x&_nc_ht=scontent.fprn12-1.fna&oh=03_AdTEWo696kCPKrAtjeHytX2Uxochzvx55gfuslUcP3CZOA&oe=6387F3B2">
 </head>
 <body>
-    <img src="img/construction.jpg"> 
+    <img src="img/construction.jpg" alt="constructions"> 
 	<section class="section-1">
 		<header>
 			<h1> NT <span>ZOGU </span></h1>
@@ -31,7 +31,7 @@
         <h2>The history</h2>
         <p>Old ideas can sometimes use new buildngs.New ideas must use old buildings</p>
         <div class="perneve">
-            <img src="https://i.pinimg.com/564x/a4/0d/34/a40d34cabd80848b22640b19ad6c9f49.jpg">
+            <img src="https://i.pinimg.com/564x/a4/0d/34/a40d34cabd80848b22640b19ad6c9f49.jpg" alt="constructions">
 			<p>This company was founded in 1985 by the honorable Banush Ibrahimi and his 4 sons.<br>
             All four of Banushi's sons were of an age where they could start working,<br> they were very popular at that time because
             they started building houses only with the tools they had and that they use for their needs.<br>
@@ -41,19 +41,19 @@
 			<h2> The boses </h2>
 			<p> A boss wants to pay for results; an employee wants recognizes for effort.<br> If boss recognizes effort ,they will get even better results</p>
 			<div class="enveri">
-				<img src="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.15752-9/313292487_611908994063277_4241785562561418971_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=ae9488&_nc_ohc=WjodXhjMk88AX8hPwf9&_nc_ht=scontent.fprn12-1.fna&oh=03_AdSh4OX9q-Bb1Njz4cWUfgv8ksTNJz4omyQjve2xQPkJCA&oe=63817CE4">
+				<img alt="img 1" src="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.15752-9/313292487_611908994063277_4241785562561418971_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=ae9488&_nc_ohc=WjodXhjMk88AX8hPwf9&_nc_ht=scontent.fprn12-1.fna&oh=03_AdSh4OX9q-Bb1Njz4cWUfgv8ksTNJz4omyQjve2xQPkJCA&oe=63817CE4">
 				<p>Enver Ibrahimi<br>The oldest and who works <br>with the part of the building</p>
 			</div>
 			<div class="gafa">
-				<img src="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.6435-9/47681812_1152331014935372_8311108935801110528_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=PicH38mqqh0AX_8jrMi&_nc_ht=scontent.fprn12-1.fna&oh=00_AfBOMRTq6K2tSUjNz7gOWInwL8d3juFvpfEmvP7NMeq35Q&oe=6384BF4B">
+				<img alt="img 2" src="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.6435-9/47681812_1152331014935372_8311108935801110528_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=PicH38mqqh0AX_8jrMi&_nc_ht=scontent.fprn12-1.fna&oh=00_AfBOMRTq6K2tSUjNz7gOWInwL8d3juFvpfEmvP7NMeq35Q&oe=6384BF4B">
 				<p>Gafurr Ibrahimi<br>The second is about the purchase <br>of land and the sale of apartments</p>
 			</div>
 			<div class="besimi">
-				<img src="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.6435-9/51098883_825975504431082_3169240433389731840_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=e3f864&_nc_ohc=gaapocKiRW0AX9VlyYR&_nc_ht=scontent.fprn12-1.fna&oh=00_AfAFTv8EYtLK6qfb99Dzx5bOk9-TokaCoLZSO11WPXM1UA&oe=63837697">
+				<img alt="img 3" src="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.6435-9/51098883_825975504431082_3169240433389731840_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=e3f864&_nc_ohc=gaapocKiRW0AX9VlyYR&_nc_ht=scontent.fprn12-1.fna&oh=00_AfAFTv8EYtLK6qfb99Dzx5bOk9-TokaCoLZSO11WPXM1UA&oe=63837697">
 				<p>Besim Ibrahimi<br>The third one is connected to <br>the water and central heating system</p>
 			</div>
 			<div class="avnia">
-				<img src="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.18169-9/22089242_922529217886292_6062945688497940243_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=QwDqjz_UKu4AX8dV7jw&_nc_ht=scontent.fprn12-1.fna&oh=00_AfAkzb5l7f1CiXt9j2Hpue3u4foikg5J40vjkZpj9k_P_A&oe=638296B9">
+				<img alt="img 4" src="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.18169-9/22089242_922529217886292_6062945688497940243_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=QwDqjz_UKu4AX8dV7jw&_nc_ht=scontent.fprn12-1.fna&oh=00_AfAkzb5l7f1CiXt9j2Hpue3u4foikg5J40vjkZpj9k_P_A&oe=638296B9">
 				<p>Avni Ibrahimi<br>The fourth which deals with<br> the part of electric current</p>
 			</div>
 
@@ -77,10 +77,10 @@
                     <span>&email; info@ntzogu.com</span>
 
                     <div class="socials">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-gmail"></i></a>
+                        <a title="instagram" href="#"><i class="fab fa-instagram"></i></a>
+                        <a title="facebook" href="#"><i class="fab fa-facebook"></i></a>
+                        <a title="twitter" href="#"><i class="fab fa-twitter"></i></a>
+                        <a title="gmail" href="#"><i class="fab fa-gmail"></i></a>
                     </div>
                 </div>
             </div>
