Shtimi dhe ndryshime teknike ne file te ndryshem si hmtl/css/js si dhe shtimi i disa fotove dhe po ashtu shtimi i sliderit

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 <label>Message</label>
 				<textarea rows="8" placeholder="Your Message..."></textarea>
 
-				<button type="button"> Next </button>
+				<button type="submit">Next</button>
 					
 					
 				</form>			
