--- a/details.html
+++ b/details.html
@@ -103,7 +103,8 @@
       </div>
     </div>
 
-    <script src="assets/data.js"></script>
-    <script src="assets/details.js"></script>
+    <script src="./data.js"></script>
+    <script src="./details.js"></script>
+
   </body>
 </html>
