Rikonstruim i folderave, per mbarevajtje me te mire backend dhe frontend, si dhe pershtatje me PHP. Konfigurimi me PDO

--- a/public/pages/project.html
+++ b/public/pages/project.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nt zogu</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image" href="https://scontent.fprn12-1.fna.fbcdn.net/v/t1.15752-9/313815675_652898892942862_3583625417749956511_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=ae9488&_nc_ohc=WRH8Aapcn9wAX9ahF9x&_nc_ht=scontent.fprn12-1.fna&oh=03_AdTEWo696kCPKrAtjeHytX2Uxochzvx55gfuslUcP3CZOA&oe=6387F3B2">
@@ -31,7 +33,7 @@
         <h3> Our Latest Work</h3>
 <div class="banesat">
         
-        <img src="https://i.pinimg.com/736x/1e/06/a1/1e06a17fc4ac6f486d8d82a5a33d5fd4.jpg" width="590" height="600" >
+        <img src="https://i.pinimg.com/736x/1e/06/a1/1e06a17fc4ac6f486d8d82a5a33d5fd4.jpg" width="590" height="600" title="Our Latest Project" />
         <p> This building was developed by our dedicated team and, as we believe, “Good buildings come from good people, and all problems are solved by good design.”
 It is one of our latest projects, carefully planned and built with passion, ensuring a safe and comfortable environment for you and your families, including recreational areas for children.
 If you want more information, you are always welcome to visit our office.</p>
