Rregullimi i index.php me header dhe footer si dhe lista e properties nga databaza

--- a/public/pages/listings.html
+++ b/public/pages/listings.html
@@ -225,7 +225,7 @@
             <h1>Prime Properties</h1>
             <p class="subtitle" id="pageSubtitle"></p>
           </div>
-          <a class="back" href="index.html">← Back</a>
+          <a class="back" href="index.php">← Back</a>
         </div>
 
         <div class="filter-section">
