--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ContactUs</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
      <section class="section-1">
@@ -11,10 +11,10 @@
 			<h1> NT <span>ZOGU </span></h1>
 			<nav>
 				<ul>
-					<li><a href="index.html">HOME</a></li>
-					<li><a href="about.html">ABOUT</a></li>
-					<li><a href="project.html">PROJECT</a></li>
-					<li><a href="contact.html">CONTACT</a></li>
+					<li><a href="index.php">HOME</a></li>
+					<li><a href="about.php">ABOUT</a></li>
+					<li><a href="project.php">PROJECT</a></li>
+					<li><a href="contact.php">CONTACT</a></li>
 				</ul>
 			</nav>
 	    </header>
