--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -16,10 +16,10 @@
       <h1> NT <span>ZOGU</span></h1>
       <nav>
         <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="about.html">ABOUT</a></li>
-          <li><a href="project.html">PROJECT</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="index.php">HOME</a></li>
+          <li><a href="about.php">ABOUT</a></li>
+          <li><a href="project.php">PROJECT</a></li>
+          <li><a href="contact.php">CONTACT</a></li>
         </ul>
       </nav>
     </header>
